implemented junit test runner element for Java #71